@@ -1,3 +1,10 @@
+2021-08-26  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* sort.c:
+	Initialize a variable.
+	* tests/upmendex.test, tests/locale1.{ist,ind}:
+	Add a new test for "icu_locale".
+
 2021-08-25  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* sort.c:
